--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
         "test": "anchor test"
     },
     "dependencies": {
-        "@project-serum/anchor": "^0.19.0"
+        "@project-serum/anchor": "^0.19.0",
+        "@saberhq/anchor-contrib": "^1.12.9",
+        "@saberhq/chai-solana": "^1.12.9",
+        "@saberhq/solana": "^0.7.9",
+        "@saberhq/solana-contrib": "^1.12.9",
+        "@saberhq/token-utils": "^1.12.9",
+        "@solana/spl-token": "^0.1.8",
+        "@solana/web3.js": "^1.31.0",
+        "@types/bn.js": "^5.1.0",
+        "bn.js": "^5.2.0",
+        "jsbi": "^4.1.0"
     },
     "devDependencies": {
+        "@types/mocha": "^9.0.0",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
-        "@types/mocha": "^9.0.0",
         "typescript": "^4.3.5"
     }
 }
