--- a/programs/splitcoin-prism/Cargo.toml
+++ b/programs/splitcoin-prism/Cargo.toml
@@ -17,3 +17,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.19.0"
+anchor-spl = "0.19.0"
+spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
