--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "compilerOptions": {
-    "types": ["mocha", "chai"],
-    "typeRoots": ["./node_modules/@types"],
-    "lib": ["es2015"],
-    "module": "commonjs",
-    "target": "es6",
-    "esModuleInterop": true
-  }
+    "extends": "@saberhq/tsconfig/tsconfig.lib.json",
+    "compilerOptions": {
+        "module": "CommonJS",
+        "types": ["mocha"],
+        "resolveJsonModule": true
+    },
+    "include": ["./src", "./tests"]
 }
