--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
         node-version: '12.x'
     - name: Install dependencies
       run: yarn
-      run: npm i -g @project-serum/anchor-cli
+    - run: npm i -g @project-serum/anchor-cli
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose
