--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,3 +28,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: yarn test
+    - run: cargo build-bpf --version
+    - run: rustup --version
