--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,8 @@ jobs:
       run: rustup toolchain add 1.53
     - name: Install Solana
       run: 'sh -c "$(curl -sSfL https://release.solana.com/v1.9.3/install)"'
+    - name: Update $PATH
+      run: export PATH="/home/runner/.local/share/solana/install/active_release/bin:$PATH"
     - name: Install Anchor
       run: npm i -g @project-serum/anchor-cli
     - run: echo $PATH
