--- a/package.json
+++ b/package.json
@@ -1,16 +1,67 @@
 {
-    "license": "Apache-2.0",
-    "scripts": {
-        "test": "anchor test"
-    },
-    "dependencies": {
-        "@project-serum/anchor": "^0.19.0"
-    },
-    "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^8.0.0",
-        "@types/mocha": "^9.0.0",
-        "typescript": "^4.3.5"
-    }
+  "name": "@split-coin/prism",
+  "version": "0.0.0",
+  "description": "Create ETF tokens",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Split-Coin/prism.git"
+  },
+  "author": "Splitcoin Engineering <engineering@splitcoin.money>",
+  "homepage": "https://splitcoin.money",
+  "license": "GPL-3.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "build": "tsc -P tsconfig.cjs.json && tsc -P tsconfig.build.json",
+    "prepare": "husky install",
+    "typecheck": "tsc",
+    "test": "anchor test --skip-build tests/*.ts"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@project-serum/anchor": "^0.19.1-beta.1",
+    "@rushstack/eslint-patch": "^1.1.0",
+    "@saberhq/anchor-contrib": "^1.12.9",
+    "@saberhq/chai-solana": "^1.12.9",
+    "@saberhq/eslint-config": "^1.12.9",
+    "@saberhq/solana": "^0.7.9",
+    "@saberhq/solana-contrib": "^1.12.9",
+    "@saberhq/token-utils": "^1.12.9",
+    "@saberhq/tsconfig": "^1.12.9",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/web3.js": "^1.31.0",
+    "@types/bn.js": "^5.1.0",
+    "@types/mocha": "^9.0.0",
+    "bn.js": "^5.2.0",
+    "chai": "^4.3.4",
+    "eslint": "^8.6.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "^2.25.4",
+    "husky": "^7.0.4",
+    "jsbi": "^4.1.0",
+    "lint-staged": ">=10",
+    "mocha": "^9.0.3",
+    "prettier": "^2.5.1",
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "@project-serum/anchor": "^0.19",
+    "@saberhq/anchor-contrib": "^1.12.9",
+    "@saberhq/solana-contrib": "^1.12.9",
+    "@saberhq/token-utils": "^1.12.9",
+    "@solana/web3.js": "^1.31.0",
+    "bn.js": "^5.2.0"
+  },
+  "files": [
+    "dist/",
+    "src/"
+  ],
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  }
 }
