--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,7 @@ jobs:
         run: npm i -g @project-serum/anchor-cli
       - run: echo $PATH
       - run: rustup --version
+      - run: anchor --version
       - run: cargo build-bpf --version
       - uses: actions/checkout@v2
       - name: Build
