--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,4 +38,6 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Run tests
-        run: yarn test
+        run: |
+          yarn test
+          ls
