--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,5 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Run tests
-        run: |
-          yarn test
-          ls
+        run: ls
+        run: yarn test
