--- a/programs/splitcoin-prism/Cargo.toml
+++ b/programs/splitcoin-prism/Cargo.toml
@@ -16,6 +16,8 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
+pyth-client = { version = "0.3.0", features = ["no-entrypoint"] }
 anchor-lang = "0.19.0"
 anchor-spl = "0.19.0"
+borsh = "0.9.2"
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
