--- a/programs/splitcoin-prism/Cargo.toml
+++ b/programs/splitcoin-prism/Cargo.toml
@@ -19,5 +19,5 @@ default = []
 pyth-client = { version = "0.3.0", features = ["no-entrypoint"] }
 anchor-lang = "0.19.0"
 anchor-spl = "0.19.0"
-borsh = "0.9.2"
+borsh = { version = "0.9.2", features = ["const-generics"] }
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
