--- a/programs/splitcoin-prism/Cargo.toml
+++ b/programs/splitcoin-prism/Cargo.toml
@@ -21,3 +21,4 @@ anchor-lang = "0.19.0"
 anchor-spl = "0.19.0"
 borsh = { version = "0.9.2", features = ["const-generics"] }
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
+serum_dex = { git = "https://github.com/project-serum/serum-dex", version = "0.5.4", features = ["no-entrypoint"] }
