--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@project-serum/anchor": "^0.19.1-beta.1",
+    "@project-serum/serum": "^0.13.61",
     "@rushstack/eslint-patch": "^1.1.0",
     "@saberhq/chai-solana": "^1.12.9",
     "@saberhq/eslint-config": "^1.12.9",
