--- a/programs/coherence-beamsplitter/Cargo.toml
+++ b/programs/coherence-beamsplitter/Cargo.toml
@@ -19,6 +19,7 @@ default = []
 pyth-client = { version = "0.3.0", features = ["no-entrypoint"] }
 anchor-lang = "0.19.0"
 anchor-spl = "0.19.0"
+solana-program = "1.9.5"
 borsh = { version = "0.9.2", features = ["const-generics"] }
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
 serum_dex = { git = "https://github.com/coherence-finance/serum-dex", version = "0.5.4", features = ["no-entrypoint"] }
