--- a/Anchor.toml
+++ b/Anchor.toml
@@ -14,10 +14,15 @@ test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 [test]
 startup_wait = 30000
 clone = [
+  # BTC Market Account
   { address = "A8YFbxQYFVqKZaoYJLLUVcQiWP7G2MeEgW5wsAQgMvFw" }, 
-  { address = "9xQeWvG816bUx9EPjHmaT23yvVM2ZWbrrpZb9PusVFin" }, 
-  { address = "9wFFyRfZBsuAha4YcuxcXLKwMxJR43S7fPfQLusDBzvT" }, 
+  # BTC Bid Address Account
+  { address = "9xQeWvG816bUx9EPjHmaT23yvVM2ZWbrrpZb9PusVFin" },
+  # Solana Market Account
+  { address = "9wFFyRfZBsuAha4YcuxcXLKwMxJR43S7fPfQLusDBzvT" },
+  # Solana Bid Account
   { address = "14ivtgssEBoBjuZJtSAPKYgpUK7DmnSwuPMqJoVTSgKJ" },
+  # Raydium DEX Program ID
   { address = "6wLt7CX1zZdFpa6uGJJpZfzWvG6W9rxXjquJDYiFwf9K" }
 ]
 validator = {url = "m"}
