--- a/programs/coherence-beamsplitter/Cargo.toml
+++ b/programs/coherence-beamsplitter/Cargo.toml
@@ -20,7 +20,8 @@ pyth-client = { version = "0.3.0", features = ["no-entrypoint"] }
 anchor-lang = "0.19.0"
 anchor-spl = { version = "0.19.0", features = ["dex"] }
 solana-program = "1.9.5"
+rust_decimal = "1.21"
+rust_decimal_macros = "1.21"
 borsh = { version = "0.9.2", features = ["const-generics"] }
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
-swap = { git = "https://github.com/project-serum/anchor/", tag = "v0.19.0", version = "0.1.0",  features = ["no-entrypoint"] }
 serum_dex = { git = "https://github.com/coherence-finance/serum-dex", version = "0.5.4", features = ["no-entrypoint"] }
