--- a/programs/coherence-beamsplitter/Cargo.toml
+++ b/programs/coherence-beamsplitter/Cargo.toml
@@ -25,4 +25,4 @@ rust_decimal = "1.21"
 rust_decimal_macros = "1.21"
 borsh = { version = "0.9.2", features = ["const-generics"] }
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
-serum_dex = { git = "https://github.com/coherence-finance/serum-dex", version = "0.5.4", features = ["no-entrypoint"] }
+mem_macros = "1.0.1"
