--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint .",
     "prepare": "husky install",
     "typecheck": "tsc",
-    "test": "anchor test"
+    "copy-idl": "cp ./target/types/coherence_beamsplitter.ts src/",
+    "test": "yarn copy-idl && anchor test"
   },
   "dependencies": {
     "@saberhq/tsconfig": "^1.12.36"
