Construction and Deconstruction, Order states. (#23)
* Add Anchor/Swap Dep

* Buy

* Fixed loop

* Aggregate pricing using remaining accounts

* Initial work for sell instruction (#22)

* Added weighted sum calc

* Add buy sdk func

* Add airdrop function

* DON'T MERGE. Switch `PrismEtf` to `AccountLoader`

* messy but buy and sell works for single quote pair

* Separation of files

* Update buy instruction for Account Loader

* tests

* DON'T MERGE: Add `extract_market_accounts`

* fix?

* Add clones

* Cardboard Boxes

* Add in CPI call for buy

* almost working tests

* fuck

* Add seeds to mint_to and change orderbook signer

* fuck me

* Refactor state accounts and init registration

* Cohere inst

* Remove dec from start order

* Decohere & finalize inst

* Private sdk methods for setup insts

* pushTokens

* Missing KP passed into

* Add batching, allow push tokens to huge etfs

* Rename constant

* Revert README

* Skim the fat

* Added simple reinit attack test

* Bounds check index on instructions

* Fix condition on finalize_order

* initOrder startOrder finalizeOrder

* Partial completion of cohere

* Update package json with idl dep

* npm

* cohere decohere

* DO NOT MERGE. Lower weighted tokens to 2, failing

* DO NOT MERGE. remove debug messages change accounts to 400

* Check if prism etf is finished on start order

* npm

* test partially complete, mutable constraint violation for some reason

* Fix several bugs in context, fix build test flow

* Finalize order now checks if all assets transferred

* add `has_one = manager`

* Construction test passing

* Better conditions for cohere test

* Change size to 10

* deploy mainnet

* Fix scaling bug and tranfser signing bug

* Address

* Address

* Deconstruct + Tests

* Lint

* No 0 amount orders, no 0 weights

* rm util.rs

* Remove import

* Decouple sdk (#24)

* Decouple init

--- a/programs/coherence-beamsplitter/Cargo.toml
+++ b/programs/coherence-beamsplitter/Cargo.toml
@@ -16,10 +16,10 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-pyth-client = { version = "0.3.0", features = ["no-entrypoint"] }
-anchor-lang = "0.19.0"
-anchor-spl = "0.19.0"
+anchor-lang = "0.20.0"
+anchor-spl = { version = "0.20.0", features = ["dex"] }
 solana-program = "1.9.5"
+bigdecimal = "0.3.0"
+rust_decimal = "1.21"
 borsh = { version = "0.9.2", features = ["const-generics"] }
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
-serum_dex = { git = "https://github.com/coherence-finance/serum-dex", version = "0.5.4", features = ["no-entrypoint"] }
