--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,5 +1,11 @@
 [programs.localnet]
-coherence_beamsplitter = "4WWKCwKfhz7cVkd4sANskBk3y2aG9XpZ3fGSQcW1yTBB"
+coherence_beamsplitter = "A29uL2xu7njxWSYSpsgYyWivAJ5DmmVC48hH6dnbJBq9"
+
+[programs.devnet]
+coherence_beamsplitter = "A29uL2xu7njxWSYSpsgYyWivAJ5DmmVC48hH6dnbJBq9"
+
+[programs.mainnet]
+coherence_beamsplitter = "A29uL2xu7njxWSYSpsgYyWivAJ5DmmVC48hH6dnbJBq9"
 
 [registry]
 url = "https://anchor.projectserum.com"
@@ -9,20 +15,15 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*"
 
 [test]
 startup_wait = 30000
 clone = [
-  # BTC Market Account
   { address = "A8YFbxQYFVqKZaoYJLLUVcQiWP7G2MeEgW5wsAQgMvFw" }, 
-  # BTC Bid Address Account
-  { address = "9xQeWvG816bUx9EPjHmaT23yvVM2ZWbrrpZb9PusVFin" },
-  # Solana Market Account
-  { address = "9wFFyRfZBsuAha4YcuxcXLKwMxJR43S7fPfQLusDBzvT" },
-  # Solana Bid Account
+  { address = "9xQeWvG816bUx9EPjHmaT23yvVM2ZWbrrpZb9PusVFin" }, 
+  { address = "9wFFyRfZBsuAha4YcuxcXLKwMxJR43S7fPfQLusDBzvT" }, 
   { address = "14ivtgssEBoBjuZJtSAPKYgpUK7DmnSwuPMqJoVTSgKJ" },
-  # Raydium DEX Program ID
   { address = "6wLt7CX1zZdFpa6uGJJpZfzWvG6W9rxXjquJDYiFwf9K" }
 ]
 validator = {url = "m"}
