--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@saberhq/tsconfig": "^1.12.36",
-    "chai-as-promised": "^7.1.1"
+    "chai-as-promised": "^7.1.1",
+    "chai-bn": "^0.3.1"
   },
   "devDependencies": {
     "@project-serum/anchor": "^0.22.1",
