--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prepare": "husky install",
     "typecheck": "tsc",
     "copy-idl": "cp ./target/types/coherence_beamsplitter.ts src/",
-    "test": "anchor build && yarn copy-idl && anchor test --skip-build"
+    "test": "anchor build && yarn copy-idl && anchor test --skip-build",
+    "key": "solana-keygen pubkey ./target/deploy/coherence_beamsplitter-keypair.json"
   },
   "dependencies": {
     "@saberhq/tsconfig": "^1.12.36",
