--- a/programs/coherence-beamsplitter/Cargo.toml
+++ b/programs/coherence-beamsplitter/Cargo.toml
@@ -22,3 +22,4 @@ bigdecimal = "0.3.0"
 rust_decimal = "1.21"
 borsh = { version = "0.9.2", features = ["const-generics"] }
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
+chainlink_solana = "0.1.0"
