--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pub": "npm version patch --force && npm run build && npm publish"
   },
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^2.1.0",
     "@project-serum/anchor": "^0.23.0",
     "@saberhq/tsconfig": "^1.12.36",
     "axios": "^0.26.1",
