--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mocha": "^9.0.3",
     "prettier": "^2.5.1",
     "ts-mocha": "^8.0.0",
+    "typedoc": "^0.22.15",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
