--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coherence-finance/sdk",
-  "version": "0.0.40",
+  "version": "0.0.77",
   "description": "SDK for Beamsplitter",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -28,6 +28,8 @@
   "dependencies": {
     "@project-serum/anchor": "^0.23.0",
     "@saberhq/tsconfig": "^1.12.36",
+    "axios": "^0.26.1",
+    "bs58": "^5.0.0",
     "chai-as-promised": "^7.1.1",
     "chai-bn": "^0.3.1"
   },
@@ -54,6 +56,7 @@
     "mocha": "^9.0.3",
     "prettier": "^2.5.1",
     "ts-mocha": "^8.0.0",
+    "typedoc": "^0.22.15",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
